<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"    >

    <EditText
        style="@style/title"
        android:id="@+id/homeworks"
        android:text="@string/hw" />

    <Button
        style="@style/menu_button"
        android:id="@+id/hw1_button"
        android:text="@string/hw1"
        android:layout_below="@id/homeworks" />

    <Button
        style="@style/menu_button"
        android:id="@+id/hw2_button"
        android:text="@string/hw2"
        android:layout_below="@id/homeworks"
        android:layout_toRightOf="@id/hw1_button" />

    <EditText
        style="@style/title"
        android:id="@+id/greeting"
        android:layout_centerVertical="true" />

    <EditText
        style="@style/title"
        android:id="@+id/classworks"
        android:layout_alignParentBottom="true"
        android:text="@string/cw"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@color/skyblue"
        android:textColor="@color/light_blue"/>

    <Button
        style="@style/menu_button"
        android:id="@+id/cw2_button"
        android:text="@string/cw2"
        android:layout_above="@id/classworks" />

</RelativeLayout>