<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/title"
            android:text="@string/aus"
            tools:ignore="LabelFor"
            android:inputType="none"/>

        <!--Austrian flag-->

        <View
            style="@style/flag_line"
            android:layout_marginTop="@dimen/button_text"
            android:background="@color/red" />
        <View
            style="@style/flag_line"
            android:background="@color/white" />
        <View
            style="@style/flag_line"
            android:layout_marginBottom="@dimen/button_text"
            android:background="@color/red" />

        <EditText
            style="@style/title"
            android:text="@string/pol"
            tools:ignore="LabelFor"
            android:inputType="none"/>

        <!--Polish flag-->

        <View
            style="@style/flag_line"
            android:layout_height="@dimen/button_width"
            android:layout_marginTop="@dimen/button_text"
            android:background="@color/white" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/button_width"
            android:layout_marginBottom="@dimen/button_text"
            android:background="@color/red" />

        <EditText
            style="@style/title"
            android:text="@string/it"
            android:inputType="none"
            tools:ignore="LabelFor" />

        <!--Italian flag-->

        <RelativeLayout
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/flag_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_text"
            android:layout_marginTop="@dimen/button_text">

            <View
                android:id="@+id/it_1"
                style="@style/flag_column"
                android:background="@color/green" />
            <View
                android:id="@+id/it_2"
                style="@style/flag_column"
                android:layout_toEndOf="@id/it_1"
                android:background="@color/white" />
            <View
                style="@style/flag_column"
                android:layout_toEndOf="@id/it_2"
                android:background="@color/red" />
        </RelativeLayout>

        <EditText
            style="@style/title"
            android:text="@string/col"
            android:inputType="none"
            tools:ignore="LabelFor" />

        <!--Columbian flag-->

        <View
            style="@style/flag_line"
            android:layout_height="@dimen/button_width"
            android:layout_marginTop="@dimen/button_text"
            android:background="@color/yellow" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/line_height"
            android:background="@color/colorPrimary" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/line_height"
            android:layout_marginBottom="@dimen/button_text"
            android:background="@color/red" />

        <EditText
            style="@style/title"
            android:text="@string/mad"
            android:inputType="none"
            tools:ignore="LabelFor" />

        <!--Flag of Madagascar-->

        <RelativeLayout
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/flag_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_text"
            android:layout_marginTop="@dimen/button_text">

            <View
                android:id="@+id/mad_1"
                style="@style/flag_column"
                android:background="@color/white" />
            <View
                android:id="@+id/mad_2"
                style="@style/flag_line"
                android:layout_height="@dimen/button_width"
                android:layout_toEndOf="@id/mad_1"
                android:background="@color/red" />
            <View
                style="@style/flag_line"
                android:layout_height="@dimen/button_width"
                android:layout_below="@id/mad_2"
                android:layout_toEndOf="@id/mad_1"
                android:background="@color/green" />
        </RelativeLayout>

        <EditText
            style="@style/title"
            android:text="@string/tai"
            android:inputType="none"
            tools:ignore="LabelFor" />

        <!--Flag of Thailand-->

        <View
            style="@style/flag_line"
            android:layout_height="@dimen/low_line"
            android:layout_marginTop="@dimen/button_text"
            android:background="@color/red" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/low_line"
            android:background="@color/white" />
        <View
            style="@style/flag_line"
            android:background="@color/colorPrimary" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/low_line"
            android:background="@color/white" />
        <View
            style="@style/flag_line"
            android:layout_height="@dimen/low_line"
            android:layout_marginBottom="@dimen/button_text"
            android:background="@color/red" />
        <EditText
            style="@style/title"
            android:text="@string/den"
            android:inputType="none"
            tools:ignore="LabelFor" />

        <!--Flag of Denmark-->

        <RelativeLayout
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/flag_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_text"
            android:layout_marginTop="@dimen/button_text"
            android:background="@color/red">

            <View
                style="@style/flag_line"
                android:layout_height="@dimen/low_line"
                android:layout_centerVertical="true"
                android:background="@color/white" />
            <View
                style="@style/flag_column"
                android:layout_width="@dimen/low_line"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/button_width"
                android:background="@color/white" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>